Add database access for Assignee, add mapstruct, add OpenApi support

--- a/src/main/resources/application-cloud.yml
+++ b/src/main/resources/application-cloud.yml
@@ -1,10 +1,6 @@
-logging:
-  level:
-    root: info
-
 spring:
   datasource:
-    url: jdbc:h2:file:./.data/todo-db
+    url: jdbc:postgres:file:./.data/todo-db
     driverClassName: org.h2.Driver
     username: user
     password: null
@@ -12,11 +8,10 @@ spring:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
       ddl-auto: update
-    show-sql: true
   h2:
     console:
       enabled: true
 
 springdoc:
   swagger-ui:
-    enabled: true
+    enabled: false
